tests/expectations/compiler/integers/i32/max_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372008]: The value 2147483648 is not a valid `i32`
    --> compiler-test:5:22
     |
   5 |         let a: i32 = 2147483648i32;
     |                      ^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
